SONARXML-220 Fix quality flaws after moving from Java 8 to Java 17 (#327)